2007-05-24  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.h:
   Add setptr() macro to free data and reassign to the same pointer.


2007-05-24  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c: Fix loading of UTF-16/32 encoded files with a BOM.


2007-05-23  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Add popup menu item: Change current working directory.
 * geany.glade, src/dialogs.c, src/geany.h, src/interface.c,
   src/keyfile.c, src/main.c, src/prefs.c:
   Add default startup directory option (closes #1704988).
 * tagmanager/ruby.c, tagmanager/strlist.c, tagmanager/strlist.h:
   Backport changes from CTags SVN to fix parse problems in the Ruby
   parser.
 * data/filetype_extensions.conf, src/filetypes.c:
   Add filetype extension "*.ruby".
 * scintilla/ScintillaGTK.cxx:
   Fix wrong target list for PRIMARY clipboard.


2007-05-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/filetypes.c, src/symbols.c, tagmanager/parsers.h,
   tagmanager/makefile.win32, tagmanager/haskell.c,
   tagmanager/Makefile.am:
   Add Haskell tags support from CTags patch on sf.net written by Peter
   Strand (thanks).
 * src/symbols.c:
   Use tag_list_add_groups() in init_tag_list().


2007-05-22  Nick Treleaven  <nick.treleaven@btinternet.com>

 * tagmanager/read.c, tagmanager/read.h, tagmanager/get.h:
   Move C-only isident(), isident1() functions to get.h.


2007-05-21  Enrico Tröger  <enrico.troeger@uvena.de>

 * NEWS, geany_private.rc, win32-config.h, doc/geany.1.in,
   doc/geany.docbook, doc/geany.txt, doc/images/*, doc/html/*:
   Updated for Geany 0.11.
 * New release: Geany 0.11 "Bandor".
 * configure.in, geany.nsi, geany_private.rc, win32-config.h,
   src/geany.h: Post-release version bump.


2007-05-16  Enrico Tröger  <enrico.troeger@uvena.de>

 * THANKS, src/about.c, po/LINGUAS, po/bg.po:
   Added Bulgarian translation (Thanks to Dilyan Rusev).


2007-05-16  Nick Treleaven  <nick.treleaven@btinternet.com>
